--- a/style.css
+++ b/style.css
@@ -124,11 +124,13 @@ nav{
 }
 nav .logo{
 	display: block;
-	width: 170px;
+    width: 170px;
     height: 60px;
-	position: absolute; top: 50%; left: 0;
-	margin-top: -20px;
-	margin-left: 30px;
+    position: absolute;
+    top: 45%;
+    left: 0;
+    margin-top: -23px;
+    margin-left: 30px;
 	background: url(img/logo.png) no-repeat 0 0;
 	background-size: 100%;
 	overflow: hidden;
@@ -162,4 +164,19 @@ nav ul li a{
 .more-info{
 	text-align: center;
 }
+.more-info p{
+	margin: 18px 0 35px;
+}
 
+.more-info h2{
+	margin: 50px 0 0;
+}
+
+.highlight{
+	background-color: #FFADF9; 
+	color: #FF3300;
+	padding: 5px 10px;
+	display: inline;
+	line-height: 50px;
+	font-weight: 800;
+}
