--- a/style.css
+++ b/style.css
@@ -106,7 +106,15 @@ button.cta{
 	border-radius: 10px;
 	text-decoration: none;
 	box-shadow: 0 0 0 10px rgba(0, 20, 0, .15);
+	cursor: pointer;
 }
+
+a.cta:active,
+button.cta:active{
+	opacity: .7;
+}
+
+
 a.cta.alt,
 button.cta.alt{
 	background-color: #FFD400;
@@ -120,6 +128,7 @@ nav{
 	box-shadow: 0 5px 8px rgba(0, 0, 0, .2);
 	position: sticky;
 	top: 0;
+	z-index: 1;
 
 }
 nav .logo{
@@ -178,5 +187,86 @@ nav ul li a{
 	padding: 5px 10px;
 	display: inline;
 	line-height: 50px;
+	font-weight: ;
+}
+
+.story h3{
+	font-size: 40px;
 	font-weight: 800;
+}
+
+.sep{
+	width: 470px;
+	height: 10px;
+	background-color: black;
+	margin: 70px auto;
+
+}
+.nb-list{
+	width: 470px;
+	padding: 20px 20px 0 20px;
+	box-sizing: border-box;
+	background-color: #EDEDED;
+	float: left;
+	margin: 0 20px 20px 0 ;
+	position: relative;
+}
+
+.nb-list li{
+	height: 70px;
+	border-radius: 10px;
+	font-size: 40px;
+	color: white;
+	font-size: bold;
+	display: block;
+	margin-bottom: 20px;
+	padding: 6px 20px;
+	box-sizing: border-box;
+}
+.nb-list li.dragging{
+	position: absolute;
+    top: 90px;
+    left: 20px;
+    right: 20px;
+	transform: rotate(6deg);
+	box-shadow: 0 2px 14px rgba(0, 0, 0, .3);
+}
+
+.nb-list li.dragging:after{
+	content: '';
+	display: block;
+	position: absolute;
+	width: 108px;
+    height: 111px;
+    background: url(img/star.png);
+    bottom: 0;
+    left: 75%;
+}
+
+.nb-list li.red	{background-color: #FF3300;}
+.nb-list li.blue {background-color: #007FFF;}
+.nb-list li.grey {background-color:rgba(0, 0, 0, 0.1);}
+.nb-list li.yellow {
+	color: black;
+	background-color: #FFD400;}
+.nb-list li.pink {background-color: #FFADF9;}
+.nb-list li.salmon {background-color: #FA8072;}
+
+.gang-img{display: block;
+ margin: 0 auto;}
+
+ footer{
+ 	text-align: center;
+	color:  rgba(0, 0, 0, .4);
+	font-size: 20px;
+	margin: 85px 0 45px;
+	font-weight: bold;
+}
+
+footer a{
+	color:  rgba(0, 0, 0, .4);
+}
+
+.popup{
+	display: none;
 }
