--- a/style.css
+++ b/style.css
@@ -4,12 +4,6 @@
 	margin: 0;
 }
 
-
-h3{
-	font-weight: 600;
-	font-size: 30px;
-}
-
 h1{
 	font-weight: 800;
 	font-size: 50px;
@@ -18,6 +12,11 @@ h1{
 h2{
 	font-weight: 800;
 	font-size: 50px;
+}
+
+h3{
+	font-weight: 600;
+	font-size: 30px;
 }
 
 h4{
@@ -31,23 +30,17 @@ p{font-weight: bold;
 }
 
 .wrapper{
-	width: 960px;
-	margin: auto;
+	width: 920px;
+	margin: 0 auto;
 }
 
 .hero-banner{
-background-color: #007FFF;
-min-height: 100vh;
-padding: 50px 50px;
-box-sizing: border-box;
-position: relative;
-overflow: hidden;
-}
-
-.hero-banner h4,
-.hero-banner h4 a{
-	color: white;
-	margin: 0;
+	background-color: #007FFF;
+	min-height: 100vh;
+	padding: 50px 50px;
+	box-sizing: border-box;
+	position: relative;
+	overflow: hidden;
 }
 
 .hero-banner h1,
@@ -60,6 +53,12 @@ overflow: hidden;
 .hero-banner h3 a{
 	color: white;
 	margin: 0 0 35px;
+}
+
+.hero-banner h4,
+.hero-banner h4 a{
+	color: white;
+	margin: 0;
 }
 
 
@@ -107,6 +106,7 @@ button.cta{
 	text-decoration: none;
 	box-shadow: 0 0 0 10px rgba(0, 20, 0, .15);
 	cursor: pointer;
+	outline: none;
 }
 
 a.cta:active,
@@ -187,7 +187,7 @@ nav ul li a{
 	padding: 5px 10px;
 	display: inline;
 	line-height: 50px;
-	font-weight: ;
+	font-weight: 800;
 }
 
 .story h3{
@@ -223,6 +223,17 @@ nav ul li a{
 	padding: 6px 20px;
 	box-sizing: border-box;
 }
+
+.nb-list li.red	{background-color: #FF3300;}
+.nb-list li.blue {background-color: #007FFF;}
+.nb-list li.grey {background-color:rgba(0, 0, 0, 0.1);}
+.nb-list li.yellow {
+		color: black;
+		background-color: #FFD400;}
+.nb-list li.pink {background-color: #FFADF9;}
+.nb-list li.salmon {background-color: #FA8072;}
+
+
 .nb-list li.dragging{
 	position: absolute;
     top: 90px;
@@ -239,24 +250,17 @@ nav ul li a{
 	width: 108px;
     height: 111px;
     background: url(img/star.png);
+    background-size: 100%;
     bottom: 0;
     left: 75%;
 }
 
-.nb-list li.red	{background-color: #FF3300;}
-.nb-list li.blue {background-color: #007FFF;}
-.nb-list li.grey {background-color:rgba(0, 0, 0, 0.1);}
-.nb-list li.yellow {
-	color: black;
-	background-color: #FFD400;}
-.nb-list li.pink {background-color: #FFADF9;}
-.nb-list li.salmon {background-color: #FA8072;}
 
-.gang-img{display: block;
- margin: 0 auto;}
+.gang-img{
+	display: block;
+ 	margin: 0 auto;}
 
  footer{
- 	text-align: center;
 	color:  rgba(0, 0, 0, .4);
 	font-size: 20px;
 	margin: 85px 0 45px;
@@ -269,4 +273,135 @@ footer a{
 
 .popup{
 	display: none;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	z-index: 2;
 }
+
+.popup.show{
+	display: block;
+}
+
+.popup .blanket{
+	background-color: rgba(0,0,0,.7);
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+}
+
+
+.popup .content{
+	box-sizing: border-box;
+	padding: 30px 40px;
+	width: 960px;
+	height: 500px;
+	background-color: white;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-top: -250px;
+	margin-left: -480px;
+}
+
+
+.popup h2{
+	margin: 10px 0 20px;
+}
+
+.popup .cta{
+	margin-top: 30px;
+	
+}
+
+.popup .close{
+	position: absolute;
+	width: 80px;
+	height: 80px;
+	background: url(img/close.png) no-repeat center center;
+	background-size: 50%;
+	top: -40px;
+	right: -40px;
+	border-radius: 50%;
+	border: none;
+	outline: none;
+	overflow: hidden;
+	text-indent: -999px;
+	cursor: pointer;
+	}
+ .popup .row:after{
+ 	content: ;
+ 	display: table;
+ 	clear: both;
+ }
+
+.popup .item{
+	float: left;
+    width: 400px;
+    margin-left: 20px;
+    text-align: left;
+}
+
+.popup .item:fírst-child{
+	margin-left: 0;
+}
+
+.popup .item label{
+	display: block;
+	font-size: 18px;
+	font-weight: bold;
+	margin: 10px 10px;
+
+}
+
+.popup .item input[type=text]{
+	display: block;
+	font-size: 30px;
+	font-weight: bold;
+	border: 4px solid black;
+	height: 70px;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 15px 20px;
+
+}
+
+
+
+
+
+
+
+
+/*<div class="popup">
+		<div class="blanket"></div>
+		<div class="content">
+			<h2>Fill in your details</h2>
+			<form action="">
+				<div class="item">
+					<label>Your first name</label>
+					<input type="text" placeholder="Awesomeface" value="Shirley">
+				</div>
+				<div class="item">
+					<label>Your last name</label>
+					<input type="text" placeholder="Circleface">
+				</div>
+				<div class="item">
+					<label>Your favoutive color</label>
+					<input type="text" placeholder="Pink">
+				</div>
+				<div class="item">
+					<label>Your favourive food</label>
+					<input type="text" placeholder="Apple Pie">
+				</div>
+				<button class="cta">I want in!</button>
+			</form>		
+			<button class="close">Close</button>
+		</div>
+	</div>
+	*/
